--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "@react-three/drei": "^9.65.5",
     "@react-three/fiber": "^8.12.2",
+    "@react-three/postprocessing": "^2.7.1",
     "autoprefixer": "10.4.14",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-three-fiber": "^6.0.13",
     "tailwindcss": "3.3.1",
-    "three-stdlib": "^2.21.9",
-    "three.meshline": "^1.4.0"
+    "three-stdlib": "^2.21.9"
   }
 }
