--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.12.2",
     "@react-three/postprocessing": "^2.7.1",
     "autoprefixer": "10.4.14",
+    "detect-gpu": "^5.0.21",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
